--- a/QiHuangDJ/VIewController/PersonCenter/PersonCenterViewController.xib
+++ b/QiHuangDJ/VIewController/PersonCenter/PersonCenterViewController.xib
@@ -1,128 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PersonCenterViewController">
             <connections>
-                <outlet property="contentHolder" destination="mPY-6t-wCp" id="ezK-Sh-BtZ"/>
                 <outlet property="tableView" destination="oUJ-wj-kTY" id="lvO-Rp-BqK"/>
-                <outlet property="thumbHolder" destination="AIS-Zd-fKA" id="tbE-iB-YWI"/>
                 <outlet property="view" destination="oUJ-wj-kTY" id="Ss6-c8-Glh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" userLabel="Origin View">
-            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rkd-Ur-nQX">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="3vM-qw-yoE"/>
-                    </constraints>
-                </view>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="muu-9I-T2S">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AIS-Zd-fKA">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
-                            <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BnL-6U-KVy">
-                                    <rect key="frame" x="110" y="32" width="100" height="100"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="100" id="WM7-xw-14Q"/>
-                                        <constraint firstAttribute="height" constant="100" id="hFg-YA-OPG"/>
-                                    </constraints>
-                                </imageView>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="图图图图图图图" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCF-fL-mxE">
-                                    <rect key="frame" x="20" y="152" width="280" height="21"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <constraints>
-                                <constraint firstAttribute="centerX" secondItem="BnL-6U-KVy" secondAttribute="centerX" id="5AI-Bd-Qco"/>
-                                <constraint firstItem="BnL-6U-KVy" firstAttribute="top" secondItem="AIS-Zd-fKA" secondAttribute="top" constant="32" id="7fr-vG-is8"/>
-                                <constraint firstItem="LCF-fL-mxE" firstAttribute="top" secondItem="BnL-6U-KVy" secondAttribute="bottom" constant="20" id="XHx-5f-D4T"/>
-                                <constraint firstAttribute="height" constant="200" id="Zbb-tu-5Ko"/>
-                                <constraint firstAttribute="trailing" secondItem="LCF-fL-mxE" secondAttribute="trailing" constant="20" id="akO-Zn-s4W"/>
-                                <constraint firstItem="LCF-fL-mxE" firstAttribute="leading" secondItem="AIS-Zd-fKA" secondAttribute="leading" constant="20" id="w5M-nm-P1z"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="evP-Xb-7UQ">
-                            <rect key="frame" x="0.0" y="200" width="320" height="40"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KBM-Sm-fcb">
-                                    <rect key="frame" x="0.0" y="0.0" width="160" height="40"/>
-                                    <state key="normal" title="我的收藏">
-                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNu-Mb-ulp">
-                                    <rect key="frame" x="160" y="0.0" width="160" height="40"/>
-                                    <state key="normal" title="我的订阅">
-                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="kNu-Mb-ulp" secondAttribute="trailing" id="0e9-ab-W4L"/>
-                                <constraint firstItem="kNu-Mb-ulp" firstAttribute="leading" secondItem="KBM-Sm-fcb" secondAttribute="trailing" id="7PN-vf-qVP"/>
-                                <constraint firstAttribute="bottom" secondItem="KBM-Sm-fcb" secondAttribute="bottom" id="DS2-gO-M4w"/>
-                                <constraint firstItem="KBM-Sm-fcb" firstAttribute="width" secondItem="kNu-Mb-ulp" secondAttribute="width" id="Fmx-4o-p6N"/>
-                                <constraint firstItem="KBM-Sm-fcb" firstAttribute="leading" secondItem="evP-Xb-7UQ" secondAttribute="leading" id="Uyt-PM-Kob"/>
-                                <constraint firstItem="KBM-Sm-fcb" firstAttribute="top" secondItem="evP-Xb-7UQ" secondAttribute="top" id="VxK-qJ-Enh"/>
-                                <constraint firstItem="kNu-Mb-ulp" firstAttribute="top" secondItem="evP-Xb-7UQ" secondAttribute="top" id="cy7-Ie-CdE"/>
-                                <constraint firstAttribute="height" constant="40" id="erA-LK-N5h"/>
-                                <constraint firstAttribute="bottom" secondItem="kNu-Mb-ulp" secondAttribute="bottom" id="z13-dR-kDI"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mPY-6t-wCp">
-                            <rect key="frame" x="0.0" y="240" width="320" height="264"/>
-                            <subviews>
-                                <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="iRA-N4-mLQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="264"/>
-                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="6" minimumInteritemSpacing="5" id="gG7-bI-RsR">
-                                        <size key="itemSize" width="157" height="100"/>
-                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                    </collectionViewFlowLayout>
-                                    <cells/>
-                                </collectionView>
-                            </subviews>
-                        </view>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="AIS-Zd-fKA" firstAttribute="leading" secondItem="muu-9I-T2S" secondAttribute="leading" id="14U-Fy-j7k"/>
-                        <constraint firstItem="AIS-Zd-fKA" firstAttribute="top" secondItem="muu-9I-T2S" secondAttribute="top" id="a5S-Sq-t8a"/>
-                        <constraint firstItem="evP-Xb-7UQ" firstAttribute="leading" secondItem="muu-9I-T2S" secondAttribute="leading" id="az3-HN-crS"/>
-                        <constraint firstItem="evP-Xb-7UQ" firstAttribute="top" secondItem="AIS-Zd-fKA" secondAttribute="bottom" id="bPb-8C-XR4"/>
-                        <constraint firstAttribute="trailing" secondItem="evP-Xb-7UQ" secondAttribute="trailing" id="gVn-N7-c41"/>
-                        <constraint firstAttribute="trailing" secondItem="AIS-Zd-fKA" secondAttribute="trailing" id="v9v-zi-cxo"/>
-                    </constraints>
-                </scrollView>
-            </subviews>
-            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstAttribute="trailing" secondItem="rkd-Ur-nQX" secondAttribute="trailing" id="3d4-HT-vRP"/>
-                <constraint firstItem="muu-9I-T2S" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="5KC-gQ-AYe"/>
-                <constraint firstItem="rkd-Ur-nQX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Lxg-Ag-5KX"/>
-                <constraint firstItem="rkd-Ur-nQX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Mze-38-UfV"/>
-                <constraint firstItem="muu-9I-T2S" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fbY-Lc-wqQ"/>
-                <constraint firstItem="AIS-Zd-fKA" firstAttribute="width" secondItem="rkd-Ur-nQX" secondAttribute="width" id="i23-Do-lvr"/>
-                <constraint firstAttribute="bottom" secondItem="muu-9I-T2S" secondAttribute="bottom" id="mO2-Ze-YKx"/>
-                <constraint firstAttribute="trailing" secondItem="muu-9I-T2S" secondAttribute="trailing" id="tjh-Xy-1ID"/>
-            </constraints>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <point key="canvasLocation" x="177" y="157"/>
-        </view>
         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="oUJ-wj-kTY">
             <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
