--- a/QiHuangDJ/VIewController/superStart/SuperStartViewController.xib
+++ b/QiHuangDJ/VIewController/superStart/SuperStartViewController.xib
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SuperStartViewController">
             <connections>
                 <outlet property="entertainerScrollView" destination="QtG-ds-mhJ" id="oF7-hv-Mes"/>
+                <outlet property="pageLabel" destination="osH-xw-Wck" id="Qgr-YN-Q4b"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,10 +19,26 @@
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QtG-ds-mhJ">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="E4d-Rl-oIi"/>
+                    </connections>
                 </scrollView>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.89999999999999991" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 / 13" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osH-xw-Wck" userLabel="Page Indicator">
+                    <rect key="frame" x="0.0" y="464" width="320" height="40"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="NWM-09-woY"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.95022624430000002" green="0.95022624430000002" blue="0.95022624430000002" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="osH-xw-Wck" secondAttribute="trailing" id="EcA-te-Nnj"/>
+                <constraint firstItem="osH-xw-Wck" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="JWu-hC-fVU"/>
+                <constraint firstAttribute="bottom" secondItem="osH-xw-Wck" secondAttribute="bottom" id="enR-Pt-Z3D"/>
                 <constraint firstItem="QtG-ds-mhJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mSS-v0-Pt2"/>
                 <constraint firstItem="QtG-ds-mhJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="o6i-Oz-qxQ"/>
                 <constraint firstAttribute="bottom" secondItem="QtG-ds-mhJ" secondAttribute="bottom" id="pY6-za-oJF"/>
